Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quidem corrupti vitae tempore consectetur ea expedita magnam culpa veritatis odio a labore iusto doloribus ut nemo, praesentium esse aliquam sapiente?</p>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam facilis magni culpa quisquam repellat expedita? Odit officia consequuntur aut sapiente quam veniam, quo itaque autem adipisci nesciunt architecto doloribus modi.</p>
 </body>
 </html>
