--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,6 +12,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quidem corrupti vitae tempore consectetur ea expedita magnam culpa veritatis odio a labore iusto doloribus ut nemo, praesentium esse aliquam sapiente?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam facilis magni culpa quisquam repellat expedita? Odit officia consequuntur aut sapiente quam veniam, quo itaque autem adipisci nesciunt architecto doloribus modi.</p>
     <p>Esse paragrafo foi adicionado dentro do GiHub Desktop para Linux.</p>
+    <h2>Alteracoes no tamanho do texto.</h2>
     <p>Esse parágrado foi adicionado na Windows!</p>
+    <p>Nova modificacao no LINUX.</p>
 </body>
 </html>
