--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -13,6 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam facilis magni culpa quisquam repellat expedita? Odit officia consequuntur aut sapiente quam veniam, quo itaque autem adipisci nesciunt architecto doloribus modi.</p>
     <p>Esse paragrafo foi adicionado dentro do GiHub Desktop para Linux.</p>
     <h2>Alteracoes no tamanho do texto.</h2>
+    <input type="button" value="Verificar" onclick="acionar()">
     <p>Esse parágrado foi adicionado na Windows!</p>
     <p>Nova modificacao no LINUX.</p>
 </body>
