--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -14,7 +14,7 @@
     <p>Esse paragrafo foi adicionado dentro do GiHub Desktop para Linux.</p>
     <h2>Alteracoes no tamanho do texto.</h2>
     <input type="button" value="Verificar" onclick="acionar()">
-    <p>Esse parágrado foi adicionado na Windows!</p>
+    <p>Esse parágrado foi adicionado na Windows e modificado no Linux comunicação!</p>
     <p>Nova modificacao no LINUX.</p>
 </body>
 </html>
