--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -16,6 +16,7 @@
     <input type="button" value="Verificar" onclick="acionar()">
     <p>Esse parágrado foi adicionado na Windows e modificado no Linux comunicação!</p>
     <p>Nova modificacao no LINUX.</p>
-    <p>Novo paragrafo</p>
+    <div>Teste</div>
+    
 </body>
 </html>
